@@ -1,13 +1,13 @@
 Name:		globus-ftp-client
 %global _name %(tr - _ <<< %{name})
-Version:	8.19
-Release:	2%{?dist}
+Version:	8.20
+Release:	1%{?dist}
 Summary:	Globus Toolkit - GridFTP Client Library
 
 Group:		System Environment/Libraries
 License:	ASL 2.0
 URL:		http://www.globus.org/
-Source:	http://www.globus.org/ftppub/gt6/packages/globus_ftp_client-8.19.tar.gz
+Source:	http://www.globus.org/ftppub/gt6/packages/globus_ftp_client-8.20.tar.gz
 BuildRoot:	%{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
 Requires:	globus-xio-popen-driver%{?_isa} >= 2
@@ -142,6 +142,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/man3/*
 
 %changelog
+* Wed Mar 04 2015 Globus Toolkit <support@globus.org> - 8.20-1
+- improve fix for GT-568
+
 * Thu Feb 12 2015 Globus Toolkit <support@globus.org> - 8.19-2
 - Add openssl build requirement for tests
 
